--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "faq.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node faq.js",
+    "dev": "nodemon faq.js"
   },
   "keywords": [],
   "author": "",
